<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<TextView  android:id="@+id/text1"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/hello"/>
    
    <Button android:id="@+id/connect_button"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:layout_weight="1" 
    	android:text="@string/disconnected"/>
    	
    <Button android:id="@+id/led_button"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:layout_weight="1" 
    	android:text="@string/ledON"/>

    
    	
	<LinearLayout android:id="@+id/LinearLayout01" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
	
		<TextView android:id="@+id/TextView01" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="Longitude : "></TextView>
		
		<TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/txtLongitude"></TextView>
	</LinearLayout>
 
	<LinearLayout android:id="@+id/LinearLayout02" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		
		<TextView android:id="@+id/TextView02" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="Latitude : "></TextView>
			
		<TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/txtLatitude"></TextView>
	</LinearLayout>
 
	<LinearLayout android:id="@+id/LinearLayout03" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		
		<TextView android:id="@+id/TextView03" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="Altitude : "></TextView>
			
		<TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/txtAltitude"></TextView>
	</LinearLayout>
	 
	<LinearLayout android:id="@+id/LinearLayout04" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		
		<TextView android:id="@+id/TextView04" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="Degree : "></TextView>
			
		<TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/txtDegree"></TextView>
	</LinearLayout>

	<LinearLayout android:id="@+id/LinearLayout05" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		
		<TextView android:id="@+id/TextView05" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="X : "></TextView>
			
		<TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/txtX"></TextView>
	</LinearLayout>
	
	<LinearLayout android:id="@+id/LinearLayout06" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		
		<TextView android:id="@+id/TextView06" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="Y : "></TextView>
			
		<TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/txtY"></TextView>
	</LinearLayout>
  
  	<LinearLayout android:id="@+id/LinearLayout07" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		
		<TextView android:id="@+id/TextView07" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="Z : "></TextView>
			
		<TextView android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/txtZ"></TextView>
	</LinearLayout>
    
    <Button android:id="@+id/forward_button"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:layout_weight="5" 
    	android:text="@string/forward"/>
    
    <Button android:id="@+id/reverse_button"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:layout_weight="5" 
    	android:text="@string/reverse"/>
    	
</LinearLayout>
